feat: update AI model support and upgrade Google GenAI library
- Update Google models from Gemini 1.5/Pro to Gemini 2.5/3.0 series with pricing
- Upgrade google-generativeai to google-genai v1.0.0 with new client API
- Add support for gemini-2.5-flash, gemini-2.5-pro, gemini-2.0-flash variants
- Add preview models gemini-3-flash-preview and gemini-3-pro-preview
- Update MODEL_LIMITS context with new Google model token limits (1M tokens)
- Refactor Google client initialization to use new genai.Client() constructor
- Update pricing table in documentation with accurate per-million-token rates
- Fix export format tuple unpacking in main.py (remove unused third element)
- Improve prompt formatting in NaturalLanguageGenerator for consistency
- Update .env.example and all documentation to reflect latest model availability

--- a/.env.example
+++ b/.env.example
@@ -8,5 +8,5 @@ OPENAI_API_KEY=
 # Anthropic (Claude 3.5 Sonnet, Claude 3 Opus, Claude 3 Haiku)
 ANTHROPIC_API_KEY=
 
-# Google (Gemini 1.5 Pro, Gemini 1.5 Flash)
+# Google (Gemini 2.5 Flash, Gemini 2.5 Pro, Gemini 3 Flash/Pro Preview)
 GOOGLE_API_KEY=
