--- a/requirements.txt
+++ b/requirements.txt
@@ -12,4 +12,4 @@ pyperclip>=1.8.0
 # LLM Providers (install the ones you need)
 openai>=1.0.0
 anthropic>=0.18.0
-google-generativeai>=0.3.0
+google-genai>=1.0.0
