--- a/.env.example
+++ b/.env.example
@@ -2,11 +2,11 @@
 # Copy this file to .env and fill in your keys
 # You only need keys for providers you want to use
 
-# OpenAI (GPT-4o, GPT-4, GPT-3.5-turbo)
+# OpenAI (GPT-4.1, GPT-4.1-mini, GPT-4.1-nano, o4-mini)
 OPENAI_API_KEY=
 
-# Anthropic (Claude 3.5 Sonnet, Claude 3 Opus, Claude 3 Haiku)
+# Anthropic (Claude Sonnet 4.5, Claude Opus 4.5, Claude Haiku 4.5)
 ANTHROPIC_API_KEY=
 
-# Google (Gemini 2.5 Flash, Gemini 2.5 Pro, Gemini 3 Flash/Pro Preview)
+# Google (Gemini 2.5 Pro, Gemini 2.5 Flash, Gemini 2.5 Flash-Lite)
 GOOGLE_API_KEY=
